# yolov5s_ncnn_inference

./: CMakeLists.txt  README.md  common.py  yolov5.cpp
include/ncnn/: platform.h
lib/cmake/ncnn/: ncnnConfig.cmake
yw_5s/: voc.names  yw_5s.param
